--- a/main/templates/chat/lobby.html
+++ b/main/templates/chat/lobby.html
@@ -16,9 +16,8 @@
         {%csrf_token%}
         <input type="text" name="room_name" placeholder="Group name">
         <input type="text" name="message">
+        <input type="file" name="file" id="file" multiple>
         <input type="submit" value="Send">
-        <input type="file" name="file" id="file">
-        
     </form>
 
 
@@ -44,13 +43,22 @@
             e.preventDefault()
             let msg = e.target.message.value
             var audio = document.getElementById('file').files[0]
-            alert(audio)
-            let formData = new FormData();
-            formData.append("message", msg)
-            formData.append("audio", audio)
+            const reader = new FileReader();
+            let rawData = new ArrayBuffer();
+            rawData = e.target.file;
+            alert(msg)
 
+            reader.onload = function(e) {
+                // binary data
+                console.log(e.target.result);
+            };
+            reader.onerror = function(e) {
+                // error occurred
+                console.log('Error : ' + e.type);
+            };
             
-            chatSocket.send(formData)
+            
+            chatSocket.send(reader)
             form.reset()
         })
     
